@@ -140,16 +140,13 @@ if (cacti_sizeof($idbyhost)) {
 				WHERE id = ?',
 				array($col_poller_id));
 
-			$url = get_url_type() . '://' . $hostname .
-				$config['url_path'] . '/remote_agent.php' .
+			$url = $config['url_path'] . '/remote_agent.php' .
 				'?action=polldata' .
 				'&host_id=' . $host_id .
 				'&' . http_build_query($local_data_ids) .
 				'&poller_id=' . $poller_id;
 
-			$fgc_contextoption = get_default_contextoption();
-			$fgc_context       = stream_context_create($fgc_contextoption);
-			$output            = json_decode(@file_get_contents($url, FALSE, $fgc_context), true);
+			$output = json_decode(call_remote_data_collector($col_poller_id, $url, 'REALTIME'), true);
 
 			if (cacti_sizeof($output)) {
 				$sql = '';
