@@ -54,9 +54,9 @@ function run_data_query($host_id, $snmp_query_id, $automation = false, $force = 
 			WHERE id = ?',
 			array($poller_id));
 
-		$fgc_contextoption = get_default_contextoption();
-		$fgc_context       = stream_context_create($fgc_contextoption);
-		$response          = @file_get_contents(get_url_type() . '://' . $hostname . $config['url_path'] . 'remote_agent.php?action=runquery&host_id=' . $host_id . '&data_query_id=' . $snmp_query_id, false, $fgc_context);
+		$url = $config['url_path'] . 'remote_agent.php?action=runquery&host_id=' . $host_id . '&data_query_id=' . $snmp_query_id;
+
+		$response = call_remote_data_collector($poller_id, $url);
 
 		if ($response != '') {
 			$response = json_decode($response, true);
